# zenoh-cpp

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  NOTICE.md  README.md  helpers.cmake  zenoh-c-branch.txt  zenohcpp.pc.in
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
ci/scripts/: build.bash  bump-and-tag.bash
cmake/: FindSphinx.cmake  helpers.cmake  zenoh-c.cmake  zenoh-pico.cmake
conda_recipe/: build.sh  fix_queryable.patch  recipe.yaml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  api.rst  cancellation.rst  channels.rst  classes.rst  closure_templates.rst  closures.rst  commons.rst  conf.py  config.rst  connectivity.rst  copyable.rst  data.rst  entities.rst  enums.rst  error_handling.rst  examples.rst  ext.rst  generic.rst  genindex.rst  index.rst  interop.rst  keyexpr.rst  liveliness.rst  matching.rst  namespaces.rst  options.rst  publish_subscribe.rst  pubsub.rst  query_reply.rst  queryable.rst  requirements.txt  scouting.rst  serialization_deserialization.rst  session.rst  session_ex.rst  shared_memory.rst  (+3 more)
examples/: CMakeLists.txt  README.md  getargs.h  getargs.hxx  z_pub_thr.cpp  z_scout.cpp  z_sub_thr.cpp
examples/c/: z_delete.c  z_get.c  z_non_blocking_get.c  z_pub.c  z_pull.c  z_put.c  z_queryable.c  z_sub.c
examples/c/zenohc/: z_non_blocking_get.c  z_put.c
examples/cpp/: z_delete.cpp  z_get.cpp  z_get_0.cpp  z_get_channel.cpp  z_get_channel_non_blocking.cpp  z_info.cpp  z_pub.cpp  z_pub_delete.cpp  z_pub_thr.cpp  z_pull.cpp  z_put.cpp  z_queryable.cpp  z_scout.cpp  z_sub.cpp  z_sub_thr.cpp
examples/cpp/universal/: z_delete.cxx  z_get.cxx  z_info.cxx  z_pub.cxx  z_pub_delete.cxx  z_pub_thr.cxx  z_pull.cxx  z_put.cxx  z_queryable.cxx  z_scout.cxx  z_sub.cxx  z_sub_thr.cxx
examples/simple/: Readme.md
examples/simple/universal/: CMakeLists.txt  z_simple.cxx
examples/simple/zenohc/: CMakeLists.txt  zc_simple.cxx
examples/simple/zenohpico/: CMakeLists.txt  zp_simple.cxx
examples/standalone/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp
examples/universal/: z_advanced_pub.cxx  z_advanced_sub.cxx  z_bytes.cxx  z_custom_serializer.cxx  z_delete.cxx  z_get.cxx  z_get_attachment.cxx  z_get_channel.cxx  z_get_channel_non_blocking.cxx  z_get_liveliness.cxx  z_info.cxx  z_liveliness.cxx  z_ping.cxx  z_pong.cxx  z_pub.cxx  z_pub_attachment.cxx  z_pub_delete.cxx  z_pub_thr.cxx  z_pull.cxx  z_put.cxx  z_querier.cxx  z_queryable.cxx  z_queryable_attachment.cxx  z_scout.cxx  z_storage.cxx  z_sub.cxx  z_sub_attachment.cxx  z_sub_liveliness.cxx  z_sub_thr.cxx
examples/universal/proto/: entity.proto  test.proto
examples/zenohc/: z_advanced_pub.cxx  z_advanced_sub.cxx  z_get_channel.cxx  z_get_channel_non_blocking.cxx  z_get_liveliness.cxx  z_get_shm.cxx  z_liveliness.cxx  z_ping_shm.cxx  z_pub_cache.cxx  z_pub_shm.cpp  z_pub_shm.cxx  z_pub_shm_thr.cxx  z_puib_shm.cxx  z_pull.c  z_querier.cxx  z_query_sub.cxx  z_queryable_shm.cxx  z_scout.c  z_sub.c  z_sub_liveliness.cxx  z_sub_shm.cxx  z_sub_thr.c
examples/zenohcxx/universal/: z_delete.cxx  z_get.cxx  z_info.cxx  z_pub.cxx  z_pub_delete.cxx  z_pub_thr.cxx  z_pull.cxx  z_put.cxx  z_queryable.cxx  z_scout.cxx  z_sub.cxx  z_sub_thr.cxx
examples/zenohcxx/zenohc/: z_get_channel.cxx
include/: serde.hxx  zenoh.hxx  zenohc.hxx  zenohcpp.h  zenohcpp_0.h  zenohcpp_base.h  zenohcpp_channel.h  zenohcpp_closures.h  zenohcpp_objects.h  zenohcpp_params.h  zenohcpp_structs.h  zenohcpp_utility.h  zenohpico.hxx
include/private/: api.hxx  base.hxx  impl.hxx  internal.hxx  serde.hxx  zenohc.hxx
include/zenoh/: api.hxx  base.hxx  channels.hxx  closures.hxx  impl.hxx  internal.hxx  serde.hxx  zenohc.hxx
include/zenoh/api/: base.hxx  bytes.hxx  cancellation.hxx  channels.hxx  close.hxx  closures.hxx  config.hxx  detail.hxx  encoding.hxx  enums.hxx  get.hxx  hello.hxx  id.hxx  interop.hxx  keyexpr.hxx  link.hxx  link_event.hxx  link_events_listener.hxx  liveliness.hxx  logging.hxx  matching.hxx  publisher.hxx  querier.hxx  query.hxx  query_consolidation.hxx  queryable.hxx  reply.hxx  sample.hxx  scout.hxx  session.hxx  source_info.hxx  subscriber.hxx  timestamp.hxx  transport.hxx  transport_event.hxx  transport_events_listener.hxx  value.hxx
include/zenoh/api/ext/: advanced_publisher.hxx  advanced_subscriber.hxx  miss.hxx  publication_cache.hxx  querying_subscriber.hxx  serialization.h  serialization.hxx  session_ext.hxx
include/zenoh/api/shm/: cleanup.hxx  shm.hxx
include/zenoh/api/shm/buffer/: buffer.hxx  zshm.hxx  zshmmut.hxx
include/zenoh/api/shm/client/: client.hxx  shm_client.hxx  shm_segment.hxx
include/zenoh/detail/: availability_checks.hxx  closures.hxx  closures_concrete.hxx  commons.hxx  interop.hxx
include/zenohcpp/: zenohcpp_base.h  zenohcpp_structs.h
include/zenohcxx/: api.hxx  base.hxx  channel.hxx  config.hxx  impl.hxx  includes.hxx  objects.hxx  structs.hxx
install/: CMakeLists.txt  PackageConfig.cmake.in  cpack_project_config.cmake  zenohcxx.pc.in
scripts/: build_local.sh  build_standalone_examples.sh  install_from_git.sh  install_from_local.sh  install_local.sh
tests/: CMakeLists.txt  closure_templates.cpp  closures_func.cpp  closures_obj_ptr_param.cpp  closures_obj_ref_param.cpp  config.cpp  keyexpr.cpp  options.cpp  run_with_router.sh  structs.cpp
tests/universal/: bytes.cxx  closure_const_ref_param.cxx  closure_move_param.cxx  closure_reply.cxx  closures.cxx  closures_func.cxx  closures_obj_ptr_param.cxx  closures_obj_ref_param.cxx  details.cxx  keyexpr.cxx  liveliness.cxx  options.cxx  pub_sub.cxx  queryable_get.cxx  serialization.cxx  structs.cxx
tests/universal/network/: advanced_pub_sub.cxx  cancellation.cxx  connectivity.cxx  implicit.cxx  keyexpr.cxx  liveliness.cxx  pub_sub.cxx  queryable_get.cxx  source_info.cxx
tests/zenohc/: advanced_pub_sub.cxx  attachment.cxx  close.cxx  config.cxx  connectivity.cxx  liveliness.cxx  pub_sub.cxx  queryable_get.cxx  session.cxx  shm_api.cxx
tests/zenohpico/: config.cxx
tests/zenohpico/network/: batching.cxx  tasks.cxx
(+15 files in other folders)
